kubernetes/cray-hms-sls/out.yaml
---
# Source: cray-hms-sls/charts/cray-service/templates/postgresql.yaml
kind: Service
apiVersion: v1
metadata:
  name: "cray-sls-postgres-0"
  labels:
    cluster-name: "cray-sls"
    role: pod
spec:
  selector:
    statefulset.kubernetes.io/pod-name: "cray-sls-postgres-0"
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
# Source: cray-hms-sls/charts/cray-service/templates/postgresql.yaml
kind: Service
apiVersion: v1
metadata:
  name: "cray-sls-postgres-1"
  labels:
    cluster-name: "cray-sls"
    role: pod
spec:
  selector:
    statefulset.kubernetes.io/pod-name: "cray-sls-postgres-1"
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
# Source: cray-hms-sls/charts/cray-service/templates/postgresql.yaml
kind: Service
apiVersion: v1
metadata:
  name: "cray-sls-postgres-2"
  labels:
    cluster-name: "cray-sls"
    role: pod
spec:
  selector:
    statefulset.kubernetes.io/pod-name: "cray-sls-postgres-2"
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
# Source: cray-hms-sls/charts/cray-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cray-sls
  labels:
    app.kubernetes.io/name: cray-sls
    helm.sh/base-chart: cray-service-6.0.0
    helm.sh/chart: unknown-chart-name-unknown-chart-version
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    cray.io/service: cray-sls
    
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: cray-sls
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: cray-hms-sls/charts/cray-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cray-sls
  labels:
    app.kubernetes.io/name: cray-sls
    helm.sh/base-chart: cray-service-6.0.0
    helm.sh/chart: unknown-chart-name-unknown-chart-version
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    cray.io/service: cray-sls
    
spec:
  replicas: 3
  strategy:
    
    rollingUpdate:
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: cray-sls
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cray-sls
        app.kubernetes.io/instance: RELEASE-NAME
      annotations:
        service.cray.io/public: "true"
        
    spec:
      
      serviceAccountName: "jobs-watcher"
      containers:
      - name: cray-sls
        image: "dtr.dev.cray.com/cray/cray-sls:latest"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8376
            name: http
        livenessProbe:
          httpGet:
            path: /v1/liveness
            port: 8376
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /v1/readiness
            port: 8376
          initialDelaySeconds: 15
          periodSeconds: 30
        volumeMounts:
          - name: slsuser-postgres-secrets
            readOnly: true
            mountPath: "/secrets/postgres/slsuser"
          - name: service-account-postgres-secrets
            readOnly: true
            mountPath: "/secrets/postgres/service_account"
        securityContext:
          runAsUser: 65534
          runAsGroup: 65534
          runAsNonRoot: true
      
      
      
      
      volumes:
        - name: slsuser-postgres-secrets
          secret:
            secretName: slsuser.cray-sls-postgres.credentials
        - name: service-account-postgres-secrets
          secret:
            secretName: service-account.cray-sls-postgres.credentials
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - cray-sls
            topologyKey: kubernetes.io/hostname
---
# Source: cray-hms-sls/charts/cray-service/templates/postgresql.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "cray-sls-postgres-pods"
spec:
  selector:
    matchLabels:
      cluster-name: "cray-sls"
      role: pod
  portLevelMtls:
    5432:
      mode: PERMISSIVE
---
# Source: cray-hms-sls/charts/cray-service/templates/postgresql.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "cray-sls-postgres"
spec:
  selector:
    matchLabels:
      application: spilo
      cluster-name: "cray-sls-postgres"
      team: "cray-sls"
  portLevelMtls:
    5432:
      mode: PERMISSIVE
---
# Source: cray-hms-sls/charts/cray-service/templates/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "cray-sls"
  labels:
    app.kubernetes.io/name: cray-sls
    helm.sh/base-chart: cray-service-6.0.0
    helm.sh/chart: unknown-chart-name-unknown-chart-version
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    
spec:
  hosts:
    - "*"
  gateways:
    - services-gateway
    - customer-admin-gateway
  http:
    - match:
        - uri:
            prefix: "/apis/sls/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: "cray-sls"
            port:
              number: 80
